--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="foot navbar-inverse">
 
   <div class="wrapper">
 
@@ -12,7 +12,7 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="footer-col footer-col-1">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -28,11 +28,17 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
+      <!-- <div class="footer-col footer-col-1">
         <p>{{ site.description }}</p>
-      </div>
+      </div> -->
     </div>
 
+  </div>
+  <div class="copyright">
+    <small>
+    Copyright © <a href="http://Guard-wen.site">Guard-wen.site</a>  2016 • All rights reserved. <br>
+    Proudly published with <a href="#">Jekyll</a>.
+  </small> 
   </div>
 
 </footer>
