--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,24 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="/guard/css/bootstrap.css">
+	<style>
+	body{padding-top: 50px; background-image: url(/guard/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
+	article{background: white;min-height: 700px;padding:20px;}
+	.collapse li:hover{background: #333;}
+	.home{width: 100%;margin: 0 auto;}
+	.home .col-md-8,.col-md-3{background: white;opacity: 0.8;margin: 20px 20px;min-height: 650px;border-radius: 5px;overflow: hidden;}
+	.latest-article{height: 600px;overflow: hidden;}
+	.label-mark span{padding: 10px;margin: 5px;display:inline-block;cursor: pointer;}
+	.label-mark span:hover{background: #333333;opacity: 0.8;}
+	.jianjie{width: 90%;margin: 0 auto;text-align: center;}
+	.page-content{padding: 0;}
+	footer{opacity: 0.9;padding-bottom: 10px;}
+	footer .wrapper{padding: 30px 20px;}
+	.copyright{color:#828282;text-align: center;}
+	@media screen and(max-width: 500px) {
+		body{background-image: url(/guard/img/chrome-logo.jpg);}
+		.home{width: 100%;padding: 0 5px;}
+	}
+	</style>
 </head>
