--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,55 @@
-<header class="site-header">
+<header>
+<!--原来有一个 class="site-header" -->
 
-  <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-
-      <div class="trigger">
+      <!-- <div class="trigger">
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
+      </div> -->
+
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+  <!-- navbar-fixed-top:固定到顶部  navbar-inverse：黑色样式  -->
+    <div class="container">
+    <!--container自适应浏览器大小布局/fluid居中固定宽度布局  -->
+      <div class="navbar-header">
+      <!-- 用于包裹导航条头部的logo和menu图标 -->
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <!-- <span class="sr-only">ToggleNavigation</span> -->
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <!-- <a class="navbar-brand" href="#">Guard-wen</a> -->
+        <a class="site-title navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
       </div>
-    </nav>
-
-  </div>
-
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a class="active glyphicon glyphicon-fire" href="/index.html">`Code</a></li>
+          <li><a href="#" class="glyphicon glyphicon-edit">`壹仟字</a></li>
+          <li class="dropdown" ><a href="#" class="dropdown-toggle  glyphicon glyphicon-leaf" data-toggle="dropdown">`多肉
+            <!-- <b class="caret"></b> -->
+            <!-- b标签为^图标 -->
+            <!-- </a>
+            <ul class="dropdown-menu navbar-inverse">
+              <li><a href="#">Chrome</a></li>
+              <li><a href="#">Firefox</a></li>
+              <li><a href="#">Safari</a></li>
+              <li><a href="#">Opera</a></li>
+              <li><a href="#">IE</a></li>
+            </ul> -->
+          </a></li>
+          <li>
+            {% for my_page in site.pages %}
+          {% if my_page.title %}
+          <a class="page-link glyphicon glyphicon-hand-right" href="{{ my_page.url | prepend: site.baseurl }}">`{{ my_page.title }}</a>
+          {% endif %}
+        {% endfor %}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
