--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,29 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
         {{ content }}
-      </div>
     </div>
 
     {% include footer.html %}
 
+    <script src="/guard/js/jquery-1.12.0.min.js"></script>
+	<script src="/guard/js/bootstrap.js"></script>
+	<script>
+		$(document).ready(function()
+		{
+			
+			$('#myTab a').click(function (e) 
+			{
+			  e.preventDefault();
+			  $(this).tab('show');
+			});
+	       $('#toTop').click(function()
+			{
+	           $('html').animate({"scrollTop": "0px"},300); //IE,FF
+	           $('body').animate({"scrollTop": "0px"},300); //Webkit
+		    });
+	   });
+	</script>
   </body>
 
 </html>
