--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="/guard/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
 	<style>
-	body{padding-top: 50px; background-image: url(/guard/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
+	body{padding-top: 50px; background-image: url(/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
 	article{background: white;min-height: 700px;padding:20px;}
 	.collapse li:hover{background: #333;}
 	.home{width: 100%;margin: 0 auto;}
@@ -25,7 +25,7 @@
 	footer .wrapper{padding: 30px 20px;}
 	.copyright{color:#828282;text-align: center;}
 	@media screen and(max-width: 500px) {
-		body{background-image: url(/guard/img/chrome-logo.jpg);}
+		body{background-image: url(/img/chrome-logo.jpg);}
 		.home{width: 100%;padding: 0 5px;}
 	}
 	</style>
