--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 
     {% include footer.html %}
 
-    <script src="/guard/js/jquery-1.12.0.min.js"></script>
-	<script src="/guard/js/bootstrap.js"></script>
+    <script src="/js/jquery-1.12.0.min.js"></script>
+	<script src="/js/bootstrap.js"></script>
 	<script>
 		$(document).ready(function()
 		{
