--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.css">
 	<style>
 	body{padding-top: 50px; background-image: url(/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
-	article{background: white;min-height: 700px;padding:20px;max-width: 960px;}
+	article{background: white;min-height: 700px;padding:20px;max-width: 960px;margin: 0 auto;}
 	.collapse li:hover{background: #333;}
 	.home{width: 100%;margin: 0 auto;}
 	.home .col-md-8,.col-md-3{background: white;opacity: 0.8;margin: 20px 20px;min-height: 650px;border-radius: 5px;overflow: hidden;}
