--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<div class="row" id="post-background">
+	<div class="col-md-2"></div>
+	<div class="col-md-8">
+		<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
@@ -13,3 +16,25 @@ layout: default
   </div>
 
 </article>
+	</div>
+	<div class="col-md-2">
+    <hr> 
+      <!--代码-->
+      <div class="label-mark">
+        <span class="label label-info">HTML5</span>
+        <span class="label label-primary">JavaScript</span>
+        <span class="label label-success">壹仟字</span>
+        <span class="label label-info">《暗时间》</span>
+        <span class="label label-warning">Bootstrap</span>
+        <span class="label label-danger">错误标签</span>
+        <span class="label label-info">默认标签</span>
+        <span class="label label-warning">Bootstrap</span>
+        <span class="label label-danger">错误标签</span>
+        <span class="label label-info">默认标签</span>
+        <hr>
+        <br>
+      </div>
+	</div>
+</div>
+
+
