--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,11 +11,12 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="/css/bootstrap.css">
 	<style>
-	body{padding-top: 50px; background-image: url(/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
-	article{background: white;min-height: 700px;padding:20px;max-width: 960px;margin: 0 auto;}
+	body{padding-top: 50px; /*background: #f0f0f0;*/ background-image: url(/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
+	#post-background{background: #f0f0f0;}
+	article{background: #ffffff;min-height: 700px;padding:20px;/*max-width: 1025px;*/}
 	.collapse li:hover{background: #333;}
-	.home{width: 100%;margin: 0 auto;}
-	.home .col-md-8,.col-md-3{background: white;opacity: 0.8;margin: 20px 20px;min-height: 650px;border-radius: 5px;overflow: hidden;}
+	.home{max-width: 1200px;margin: 0 auto;}
+	.home .col-md-7,.col-md-4{background: white;opacity: 0.8;margin: 20px 20px;min-height: 650px;border-radius: 5px;overflow: hidden;}
 	.latest-article{height: 600px;overflow: hidden;}
 	.label-mark span{padding: 10px;margin: 5px;display:inline-block;cursor: pointer;}
 	.label-mark span:hover{background: #333333;opacity: 0.8;}
