--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
 	.label-mark span:hover{background: #333333;opacity: 0.8;}
 	.jianjie-box{width: 85%;height: 280px;margin: 0 auto;}
 	.jianjie{width: 140px;height: 140px;position: relative;margin: 0 auto;top: 25%;border-radius: 200px;}
-	.jianjie img{border: 5px solid #f0f0f0;box-shadow: 1px 1px 10px #33384c;}
+	.jianjie img{border: 5px solid #f0f0f0;box-shadow: 1px 1px 10px #33384c;border-radius: 200px;}
 	.page-content{padding: 0;}
 	footer{opacity: 0.9;padding-bottom: 10px;}
 	footer .wrapper{padding: 30px 20px;}
