--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="/css/bootstrap.css">
 	<style>
-	body{padding-top: 50px; /*background: #f0f0f0;*/ background-image: url(/img/guard1920.jpg);background-position:top;background-repeat:repeat;}
+	body{padding-top: 50px; /*background: #f0f0f0;*/ background-image: url(/img/bg3.jpg);background-position:center;background-repeat:repeat;}
 	#post-background{background: #f0f0f0;}
 	article{background: #ffffff;min-height: 700px;padding:20px;/*max-width: 1025px;*/}
 	.collapse li:hover{background: #333;}
@@ -21,7 +21,8 @@
 	.label-mark span{padding: 10px;margin: 5px;display:inline-block;cursor: pointer;}
 	.label-mark span:hover{background: #333333;opacity: 0.8;}
 	.jianjie-box{width: 85%;height: 280px;margin: 0 auto;}
-	.jianjie{width: 140px;height: 140px;position: relative;margin: 0 auto;top: 25%;border-radius: 200px;border: 5px solid #f0f0f0;box-shadow: 1px 1px 10px #33384c;}
+	.jianjie{width: 140px;height: 140px;position: relative;margin: 0 auto;top: 25%;border-radius: 200px;border: 5px solid #f0f0f0;box-shadow: 1px 1px 10px #33384c;background-image: url(/img/jianjie1.jpg);}
+	.jianjie:hover{cursor: pointer;}
 	.page-content{padding: 0;}
 	footer{opacity: 0.9;padding-bottom: 10px;}
 	footer .wrapper{padding: 30px 20px;}
