--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="active glyphicon glyphicon-fire" href="/index.html">`Code</a></li>
+          <li><a class="active glyphicon glyphicon-fire" href="/code.html">`Code</a></li>
           <li><a href="#" class="glyphicon glyphicon-edit">`壹仟字</a></li>
           <li class="dropdown" ><a href="#" class="dropdown-toggle  glyphicon glyphicon-leaf" data-toggle="dropdown">`多肉
             <!-- <b class="caret"></b> -->
