--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,19 +11,23 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="/css/bootstrap.css">
 	<style>
+	*{font-family: 微软雅黑;}
 	body{padding-top: 50px; /*background: #f0f0f0;*/ background-image: url(/img/bg3.jpg);background-position:center;background-repeat:repeat;}
 	#post-background{background: #f0f0f0;}
 	article{background: #ffffff;min-height: 700px;padding:20px;/*max-width: 1025px;*/}
 	.collapse li:hover{background: #333;}
 	.home{max-width: 1200px;margin: 0 auto;}
-	.home .col-md-7,.col-md-4{background: white;opacity: 0.8;margin: 20px 20px;min-height: 650px;border-radius: 5px;overflow: hidden;}
-	.latest-article{height: 600px;overflow: hidden;}
+	.home .col-md-7,.col-md-4{background: white;opacity: 0.8;margin: 10px 10px;max-height: 700px;border-radius: 5px;overflow: hidden;}
+	.title-icon{width: 40px;height: 40px;}
+	.latest-article{height: 700px;overflow: hidden;}
+	.latest-article h2 a{color: #222222;}
 	.label-mark span{padding: 10px;margin: 5px;display:inline-block;cursor: pointer;}
 	.label-mark span:hover{background: #333333;opacity: 0.8;}
 	.jianjie-box{width: 85%;height: 280px;margin: 0 auto;}
-	.jianjie{width: 140px;height: 140px;position: relative;margin: 0 auto;top: 25%;border-radius: 200px;border: 5px solid #f0f0f0;box-shadow: 1px 1px 10px #33384c;background-image: url(/img/jianjie1.jpg);}
-	.jianjie:hover{cursor: pointer;}
+	.jianjie{width: 140px;height: 140px;position: relative;margin: 0 auto;top: 25%;border-radius: 200px;border: 5px solid #f0f0f0;background-image: url(/img/jianjie1.jpg);}
+	.jianjie:hover{cursor: pointer;box-shadow: 1px 1px 10px #222222;}
 	.page-content{padding: 0;}
+
 	footer{opacity: 0.9;padding-bottom: 10px;}
 	footer .wrapper{padding: 30px 20px;}
 	.copyright{color:#828282;text-align: center;}
